Bug 385915 - Recent project list is not cleared
Summary: Recent project list is not cleared
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: All build tools (other bugs)
Version First Reported In: 5.2.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2017-10-18 15:25 UTC by Silviu
Modified: 2018-03-25 20:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Silviu 2017-10-18 15:25:45 UTC
I open KDevelop
       No document is opened
       I press Recent Project button
       I press Clear List and the Recent Project list is cleared
       I close KDevelop
       I open again and the list is still present
Comment 1 Francis Herne 2017-11-18 00:23:30 UTC
Reproduced on Linux with 5.2.0.
Comment 2 Kevin Funk 2018-03-25 20:57:07 UTC
Git commit 9e2f3f3b11810c1a4903db232d4b822589adbedc by Kevin Funk.
Committed on 25/03/2018 at 20:56.
Pushed by kfunk into branch '5.2'.

shell: Save entries of recent projects action

... on exit
FIXED-IN: 5.2.2

M  +11   -5    kdevplatform/shell/projectcontroller.cpp
M  +2    -0    kdevplatform/shell/projectcontroller.h

https://commits.kde.org/kdevelop/9e2f3f3b11810c1a4903db232d4b822589adbedc