shell: Save entries of recent projects action

... on exit

BUG: 385915
FIXED-IN: 5.2.2